improvement [docs] update readme

--- a/README.org
+++ b/README.org
@@ -1,29 +1,29 @@
-# Station
+* Station
 驿站爬虫系统
 
-# development
+* development
 
-## 1. install environment
+** 1. install environment
 
-#+BEGIN_SRC shell
+*+BEGIN_SRC shell
 install ruby
 install bundler
-#+END_SRC
+*+END_SRC
 
-## 2. configure
+** 2. configure
 
 config/database.yml
 config/initializers/*.rb
 
-## 3. init
-#+BEGIN_SRC shell
+** 3. init
+*+BEGIN_SRC shell
 bundle install
 rake db:create_all
 rake db:migrate_all
-#+END_SRC
+*+END_SRC
 
-## 4. run
+** 4. run
 
-#+BEGIN_SRC shell
+*+BEGIN_SRC shell
 rake 
-#+END_SRC
+*+END_SRC
